--- a/CSS-Grids/free-code-camp-example/index.html
+++ b/CSS-Grids/free-code-camp-example/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="styles.css">
     <title>CSS Grid basics</title>
 </head>
 <body>
     <div class="container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
+        <div class="header">HEADER</div>
+        <div class="menu">MENU</div>
+        <div class="content">CONTENT</div>
+        <div class="footer">FOOTER</div>
     </div>
 </body>
 </html>
