take up full width of screen, bg color to black

--- a/CSS-Grids/Mondrian-recreation/index.html
+++ b/CSS-Grids/Mondrian-recreation/index.html
@@ -20,6 +20,7 @@
         <div class="h">h</div>
         <div class="i">i</div>
         <div class="j">j</div>
+        <div class="k">k</div>
     </div>
 </body>
 </html>
