Start with nav-bar element

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -10,6 +10,13 @@
     <title>HuffPost home page</title>
 </head>
 <body>
+    <!-- Our Main Container -->
+    <div class="container">
+        <div class="navbar">
+
+        </div>
+
+    </div>
     
 </body>
 </html>
