make layout for 3 parts - fix tho

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -12,9 +12,33 @@
 <body>
     <!-- Our Main Container -->
     <div class="container">
-        <div class="navbar">
 
-        </div>
+        <!-- Navbar elements -->
+        <div class="hamburger-menu">menu</div>
+        <div class="logo"> logo</div>
+        <div class="social-icons">social icons</div>
+        <!-- /end of Navbar -->
+
+        <!-- Main Section -->
+        <div class="bg-img"></div>
+        <!-- /end of Main Section -->
+
+        <!-- Section 1 (left) -->
+        <div class="sec-1-left">Section 1</div>
+        <!-- /end of Section 1 (left) -->
+
+        <!-- Section 2 (center) -->
+        <div class="sec-2-center">Section 2</div>
+        <!-- /end of Section 2 (center) -->
+
+        <!-- Section 3 (right) -->
+        <div class="sec-3-right">Section 3</div>
+        <!-- /end of Section 3 (right) -->
+
+        <!-- Section 04 (right) -->
+        <div class="sec-4-right">Section 4</div>
+        <!-- /end of Section 4 (right) -->
+        
 
     </div>
     
