--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -14,30 +14,44 @@
     <div class="container">
 
         <!-- Navbar elements -->
-        <div class="hamburger-menu">menu</div>
-        <div class="logo"> logo</div>
-        <div class="social-icons">social icons</div>
+        <div class="navbar">
+            <div class="hamburger-menu"></div>
+            <div class="logo"></div>
+            <div class="social-icons"></div>
+        </div>
         <!-- /end of Navbar -->
 
         <!-- Main Section -->
         <div class="bg-img"></div>
         <!-- /end of Main Section -->
 
-        <!-- Section 1 (left) -->
-        <div class="sec-1-left">Section 1</div>
-        <!-- /end of Section 1 (left) -->
+        <!-- Headlines Section -->
 
-        <!-- Section 2 (center) -->
-        <div class="sec-2-center">Section 2</div>
-        <!-- /end of Section 2 (center) -->
+            <!-- Section 1 (left) -->
+            <div class="sec-1-left">Section 1</div>
+            <!-- /end of Section 1 (left) -->
 
-        <!-- Section 3 (right) -->
-        <div class="sec-3-right">Section 3</div>
-        <!-- /end of Section 3 (right) -->
+            <!-- Section 2 (center) -->
+            <div class="sec-2-center">Section 2</div>
+            <!-- /end of Section 2 (center) -->
 
-        <!-- Section 04 (right) -->
-        <div class="sec-4-right">Section 4</div>
-        <!-- /end of Section 4 (right) -->
+            <!-- Section 3 (right) -->
+            <div class="sec-3-right">Section 3</div>
+            <!-- /end of Section 3 (right) -->
+
+            <!-- Section 04 (right) -->
+            <div class="sec-4-right">Section 4</div>
+            <!-- /end of Section 4 (right) -->
+
+        <!-- /end of Content Section -->
+
+        <!-- News Section -->
+            <!-- News Big Story -->
+            <div class="news-big"> News big</div>
+            <!-- /end of News Big Story -->
+
+        
+        <!-- /end of News Section -->
         
 
     </div>
