Add navbar and main section img and h1

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- Our basic styles in layout creation -->
-    <link rel="stylesheet" href="basic.css">
+    <!-- <link rel="stylesheet" href="basic.css"> -->
     <title>HuffPost home page</title>
 </head>
 <body>
@@ -21,14 +21,50 @@
 
         <!-- Navbar elements -->
         <div class="navbar">
-            <div class="hamburger-menu"></div>
-            <div class="logo"></div>
-            <div class="social-icons"></div>
+
+            <!-- Wrapper for all nav content -->
+            <div class="nav-wrapper">
+
+                <!-- Hamburger menu -->
+                <div class="hamburger-menu"></div>
+                <!-- /end of Hamburger menu -->
+
+                <!-- Our main Huff Post logo -->
+                <div class="logo">
+                    <img src="img/HuffPostHero.svg">
+                </div>
+                <!-- /end of main logo -->
+
+                <!-- Social icons  -->
+                <div class="social-icons"></div>
+                <!-- /end of Social icons  -->
+            
+            </div>
+            <!-- /end of Wrapper for all nav content -->
+
         </div>
         <!-- /end of Navbar -->
 
         <!-- Main Section -->
-        <div class="bg-img"></div>
+
+        <!-- Main Content Wrapper with image-->
+        <div class="main-content-wrapper" style="background-image: url('img/main-bg.jpeg');">
+            <!-- Overlay -->
+            <div class="main-content-overlay">
+                <!-- Main Heading -->
+                <div class="main-content-h1-w">
+                    <div class="main-content-h1">
+                        AYANNA!
+                        <br>
+                        LEFT STUNNER IN MA.
+                    </div>
+                </div>
+                <!-- /end of Main heading -->
+            </div>
+            <!-- /end of Overlay -->
+        </div>
+        <!-- Main Content Wrapper -->
+
         <!-- /end of Main Section -->
 
         <!-- Headlines Section -->
