Add hover styles to navbar elements

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -63,6 +63,12 @@
                     </div>
                 </div>
                 <!-- /end of Social icons  -->
+
+                <!-- Language Selection -->
+                <div class="language-selection">
+                    <span class="language-editions-text">EDITION</span>
+                </div>
+                <!-- /end of Language Selection -->
             
             </div>
             <!-- /end of Wrapper for all nav content -->
