Styling: Add top stories headline and card

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -102,7 +102,63 @@
         <!-- Headlines Section -->
 
             <!-- Section 1 (left) -->
-            <div class="sec-1-left">Section 1</div>
+            <div class="sec-1-left">
+                <!-- Top Stories Title Flag -->
+                <div class="top-title-flag">
+                    <!-- Top title text -->
+                    <h1 class="top-title-text">TOP STORIES</h1>
+                </div>
+                <!-- /end of Top Stories Title Flag -->
+
+                <!-- Top Stories Content -->
+                <div class="top-stories-content">
+
+                    <!-- Main card content -->
+                    <div class="tp-main-card">
+                        <!-- Main card img -->
+                        <div class="tp-main-card-img-wrapper">
+                            <img class="tp-main-card-img" src="https://img.huffingtonpost.com/asset/5b90c97e190000930a5037dd.jpeg?cache=uomucfvpjh&ops=432_243,quality_75" />
+                        </div>
+                        <!-- Main card details -->
+                        <div class="tp-main-card-details">
+                            <a class="tp-main-card-link">
+                                <div class="tp-main-card-text">
+                                    Homosexuality Is No Longer A Crime, India Supreme Court Rules
+                                </div>
+                            </a>
+                        </div>
+                        <!-- /end of Main card details -->
+                    </div>
+                    <!-- /end of Main card content -->
+
+                    <!-- Small Cards Content Wrapper -->
+                    <div class="tp-small-cards-wrapper">
+
+                        <!-- Small card -->
+                            <div class="tp-small-card">
+                                <!-- Small card image -->
+                                <div class="tp-small-card-img-wrapper">
+                                    <img class="" src="https://img.huffingtonpost.com/asset/5b907348190000930a5037b4.jpeg?cache=j9fm3vzlob&ops=96_96,quality_75" />
+                                </div>
+                                <!-- Small card details -->
+                                <div class="tp-small-card-details">
+                                    <a class="tp-small-card-link">
+                                        <div class="tp-small-card-link">
+                                            WHO: After Ebola Death In Urban Area, ‘No One Should Be Sleeping Well Tonight’
+                                        </div>
+                                    </a>
+                                </div>
+
+                            </div>
+                        <!-- /end of Small card -->
+
+                    </div>
+                    <!-- /end of Small Cards Content  -->
+
+                </div>
+                <!-- /end of Top Stories Content -->
+
+            </div>
             <!-- /end of Section 1 (left) -->
 
             <!-- Section 2 (center) -->
