--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -103,12 +103,17 @@
 
             <!-- Section 1 (left) -->
             <div class="sec-1-left">
-                <!-- Top Stories Title Flag -->
-                <div class="top-title-flag">
-                    <!-- Top title text -->
-                    <h1 class="top-title-text">TOP STORIES</h1>
+                
+                <!-- Top Stories Title Box -->
+                <div class="top-title-box">
+                    <!-- Top Stories Title Flag -->
+                    <div class="top-title-flag">
+                        <!-- Top title text -->
+                        <h1 class="top-title-text">TOP STORIES</h1>
+                    </div>
+                    <!-- /end of Top Stories Title Flag -->
                 </div>
-                <!-- /end of Top Stories Title Flag -->
+                <!-- /end of Top Stories Title Box -->
 
                 <!-- Top Stories Content -->
                 <div class="top-stories-content">
@@ -138,7 +143,7 @@
                             <div class="tp-small-card">
                                 <!-- Small card image -->
                                 <div class="tp-small-card-img-wrapper">
-                                    <img class="" src="https://img.huffingtonpost.com/asset/5b907348190000930a5037b4.jpeg?cache=j9fm3vzlob&ops=96_96,quality_75" />
+                                    <img class="tp-small-card-img" src="https://img.huffingtonpost.com/asset/5b907348190000930a5037b4.jpeg?cache=j9fm3vzlob&ops=96_96,quality_75" />
                                 </div>
                                 <!-- Small card details -->
                                 <div class="tp-small-card-details">
@@ -148,7 +153,57 @@
                                         </div>
                                     </a>
                                 </div>
+                            </div>
+                        <!-- /end of Small card -->
 
+                        <!-- Small card -->
+                        <div class="tp-small-card">
+                                <!-- Small card image -->
+                                <div class="tp-small-card-img-wrapper">
+                                    <img class="tp-small-card-img" src="https://img.huffingtonpost.com/asset/5b907348190000930a5037b4.jpeg?cache=j9fm3vzlob&ops=96_96,quality_75" />
+                                </div>
+                                <!-- Small card details -->
+                                <div class="tp-small-card-details">
+                                    <a class="tp-small-card-link">
+                                        <div class="tp-small-card-link">
+                                            WHO: After Ebola Death In Urban Area, ‘No One Should Be Sleeping Well Tonight’
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        <!-- /end of Small card -->
+
+                        <!-- Small card -->
+                        <div class="tp-small-card">
+                                <!-- Small card image -->
+                                <div class="tp-small-card-img-wrapper">
+                                    <img class="tp-small-card-img" src="https://img.huffingtonpost.com/asset/5b907348190000930a5037b4.jpeg?cache=j9fm3vzlob&ops=96_96,quality_75" />
+                                </div>
+                                <!-- Small card details -->
+                                <div class="tp-small-card-details">
+                                    <a class="tp-small-card-link">
+                                        <div class="tp-small-card-link">
+                                            WHO: After Ebola Death In Urban Area, ‘No One Should Be Sleeping Well Tonight’
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        <!-- /end of Small card -->
+
+                        <!-- Small card -->
+                        <div class="tp-small-card">
+                                <!-- Small card image -->
+                                <div class="tp-small-card-img-wrapper">
+                                    <img class="tp-small-card-img" src="https://img.huffingtonpost.com/asset/5b907348190000930a5037b4.jpeg?cache=j9fm3vzlob&ops=96_96,quality_75" />
+                                </div>
+                                <!-- Small card details -->
+                                <div class="tp-small-card-details">
+                                    <a class="tp-small-card-link">
+                                        <div class="tp-small-card-link">
+                                            WHO: After Ebola Death In Urban Area, ‘No One Should Be Sleeping Well Tonight’
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         <!-- /end of Small card -->
 
