Add headline center content

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -217,7 +217,55 @@
             <!-- /end of Section 1 (left) -->
 
             <!-- Section 2 (center) -->
-            <div class="sec-2-center">Section 2</div>
+            <div class="sec-2-center">
+
+                <!-- Huffing Post Zone Center -->
+                <div class="hp-z-center">
+                    <!-- Huffing Post Zone Center Box-->
+                    <div class="hp-z-center-box">
+                        <!-- HP Zone Center Image Wrapper -->
+                        <div class="hp-z-center-img-wrapper">
+                            <img class="hp-z-center-img" src="https://img.huffingtonpost.com/asset/5b908c48200000430034c0b8.jpeg?cache=ypobmtpvrf&ops=936_526,prog,quality_75" />
+                        </div>
+                        <!-- /end of HP Zone Center Image Wrapper -->
+
+                        <!-- HP Zone Center Headline -->
+                        <div class="hp-z-center-headline">
+                            <a class="hp-z-center-link">
+                                <div class="hp-z-center-text">
+                                    TRUMP RAGES! TURN THE OP-ED WRITER IN!
+                                </div>
+                            </a>
+                        </div>
+                        <!-- HP Zone Center Headline -->
+
+                        <!-- HP ZONE Center Details -->
+                        <div class="hp-z-center-details">
+                            <!-- HP Zone Center Details des-->
+                            <div class="hp-z-center-des">
+                                <a class="hp-z-center-des-link">
+                                    <div class="hp-z-center-des-text">
+                                        Trump Calls Anonymous Writer Of New York Times ‘Resistance’ Piece ‘Gutless’
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- HP Zone Center Details author-->
+                            <div class="hp-z-center-author">
+                                <a class="hp-z-center-author-link">
+                                    <div class="hp-z-center-author-text">
+                                        By Doha Madani
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- /end of HP ZONE Center Details -->
+
+                    </div>
+                    <!-- /end of Huffing Post Zone Center Box-->
+                </div>
+                <!-- /end of Huffing Post Zone Center -->
+
+            </div>
             <!-- /end of Section 2 (center) -->
 
             <!-- Section 3 (right) -->
