Content: change content on HP zone center card

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -270,7 +270,7 @@
                         <div class="hp-z-center-box">
                             <!-- HP Zone Center Image Wrapper -->
                             <div class="hp-z-center-img-wrapper">
-                                <img class="hp-z-center-img" src="https://img.huffingtonpost.com/asset/5b908c48200000430034c0b8.jpeg?cache=ypobmtpvrf&ops=936_526,prog,quality_75" />
+                                <img class="hp-z-center-img" src="https://img.huffingtonpost.com/asset/5b90cf5719000014035037de.jpeg?cache=ftxbdqziw4&ops=936_526,prog,quality_75" />
                             </div>
                             <!-- /end of HP Zone Center Image Wrapper -->
     
@@ -278,7 +278,7 @@
                             <div class="hp-z-center-headline">
                                 <a class="hp-z-center-link">
                                     <div class="hp-z-center-text">
-                                        TRUMP RAGES! TURN THE OP-ED WRITER IN!
+                                        WHY CAN’T KAVANAUGH ANSWER THIS SENATOR’S QUESTION?
                                     </div>
                                 </a>
                             </div>
@@ -290,7 +290,7 @@
                                 <div class="hp-z-center-des">
                                     <a class="hp-z-center-des-link">
                                         <div class="hp-z-center-des-text">
-                                            Trump Calls Anonymous Writer Of New York Times ‘Resistance’ Piece ‘Gutless’
+                                            Kamala Harris Grilled Kavanaugh About His Discussions Of The Russia Probe
                                         </div>
                                     </a>
                                 </div>
@@ -298,7 +298,7 @@
                                 <div class="hp-z-center-author">
                                     <a class="hp-z-center-author-link">
                                         <div class="hp-z-center-author-text">
-                                            By Doha Madani
+                                            By Nick Visser
                                         </div>
                                     </a>
                                 </div>
@@ -309,6 +309,9 @@
 
                 </div>
                 <!-- /end of Huffing Post Zone Center -->
+
+            </div>
+            <!--/end of Huffing Post Zone Center -->
 
             </div>
             <!-- /end of Section 2 (center) -->
