Styling: Latest News Section for desktop

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -357,7 +357,136 @@
                                     </a>
                                 </div>
                                 <!-- /end of Latest News Card Text Wrapper  -->
-                                
+                                <!-- Latest News Card Time Text -->
+                                <div class="ln-news-card-time-text">
+                                    <div class="ln-news-time-text">
+                                        16 hours ago
+                                    </div>
+                                </div>
+                                <!-- /end of Latest News Card Time Text -->
+                            </div>
+                            <!-- /end of Latest News Card Details -->
+                        </div>
+                        <!-- /end of Latest News Card  -->
+
+                        <!-- Latest News Card  -->
+                        <div class="ln-news-card">
+                            <!-- Latest News Card Details -->
+                            <div class="ln-news-card-details">
+                                <!-- Latest News Card Text Wrapper  -->
+                                <div class="ln-news-card-text-wrapper">
+                                    <!-- Latest news Card Link -->
+                                    <a class="ln-news-card-link">
+                                        <div class="ln-news-card-text">
+                                            Ryan Reynolds Started A Twitter Beef With Paddington Bear And All Hell Broke Loose
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- /end of Latest News Card Text Wrapper  -->
+                                <!-- Latest News Card Time Text -->
+                                <div class="ln-news-card-time-text">
+                                    <div class="ln-news-time-text">
+                                        16 hours ago
+                                    </div>
+                                </div>
+                                <!-- /end of Latest News Card Time Text -->
+                            </div>
+                            <!-- /end of Latest News Card Details -->
+                        </div>
+                        <!-- /end of Latest News Card  -->
+
+                        <!-- Latest News Card  -->
+                        <div class="ln-news-card">
+                            <!-- Latest News Card Details -->
+                            <div class="ln-news-card-details">
+                                <!-- Latest News Card Text Wrapper  -->
+                                <div class="ln-news-card-text-wrapper">
+                                    <!-- Latest news Card Link -->
+                                    <a class="ln-news-card-link">
+                                        <div class="ln-news-card-text">
+                                            Ryan Reynolds Started A Twitter Beef With Paddington Bear And All Hell Broke Loose
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- /end of Latest News Card Text Wrapper  -->
+                                <!-- Latest News Card Time Text -->
+                                <div class="ln-news-card-time-text">
+                                    <div class="ln-news-time-text">
+                                        16 hours ago
+                                    </div>
+                                </div>
+                                <!-- /end of Latest News Card Time Text -->
+                            </div>
+                            <!-- /end of Latest News Card Details -->
+                        </div>
+                        <!-- /end of Latest News Card  -->
+
+                        <!-- Latest News Card  -->
+                        <div class="ln-news-card">
+                            <!-- Latest News Card Details -->
+                            <div class="ln-news-card-details">
+                                <!-- Latest News Card Text Wrapper  -->
+                                <div class="ln-news-card-text-wrapper">
+                                    <!-- Latest news Card Link -->
+                                    <a class="ln-news-card-link">
+                                        <div class="ln-news-card-text">
+                                            Ryan Reynolds Started A Twitter Beef With Paddington Bear And All Hell Broke Loose
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- /end of Latest News Card Text Wrapper  -->
+                                <!-- Latest News Card Time Text -->
+                                <div class="ln-news-card-time-text">
+                                    <div class="ln-news-time-text">
+                                        16 hours ago
+                                    </div>
+                                </div>
+                                <!-- /end of Latest News Card Time Text -->
+                            </div>
+                            <!-- /end of Latest News Card Details -->
+                        </div>
+                        <!-- /end of Latest News Card  -->
+
+                        <!-- Latest News Card  -->
+                        <div class="ln-news-card">
+                            <!-- Latest News Card Details -->
+                            <div class="ln-news-card-details">
+                                <!-- Latest News Card Text Wrapper  -->
+                                <div class="ln-news-card-text-wrapper">
+                                    <!-- Latest news Card Link -->
+                                    <a class="ln-news-card-link">
+                                        <div class="ln-news-card-text">
+                                            Ryan Reynolds Started A Twitter Beef With Paddington Bear And All Hell Broke Loose
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- /end of Latest News Card Text Wrapper  -->
+                                <!-- Latest News Card Time Text -->
+                                <div class="ln-news-card-time-text">
+                                    <div class="ln-news-time-text">
+                                        16 hours ago
+                                    </div>
+                                </div>
+                                <!-- /end of Latest News Card Time Text -->
+                            </div>
+                            <!-- /end of Latest News Card Details -->
+                        </div>
+                        <!-- /end of Latest News Card -->
+
+                        <!-- Latest News Card  -->
+                        <div class="ln-news-card">
+                            <!-- Latest News Card Details -->
+                            <div class="ln-news-card-details">
+                                <!-- Latest News Card Text Wrapper  -->
+                                <div class="ln-news-card-text-wrapper">
+                                    <!-- Latest news Card Link -->
+                                    <a class="ln-news-card-link">
+                                        <div class="ln-news-card-text">
+                                            Ryan Reynolds Started A Twitter Beef With Paddington Bear And All Hell Broke Loose
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- /end of Latest News Card Text Wrapper  -->
                                 <!-- Latest News Card Time Text -->
                                 <div class="ln-news-card-time-text">
                                     <div class="ln-news-time-text">
@@ -372,7 +501,6 @@
 
                     </div>
                     <!-- /end of Latest News Card Wrapper -->
-
                     
                 </div>
                 <!-- /end of Latest News Section -->
