Styling: Add grid column and rows for next section - mobile and desktop

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -508,10 +508,6 @@
             </section>
             <!-- /end of Section 3 (right) -->
 
-            <!-- Section 04 (right) -->
-            <section class="sec-4-right">Section 4</section>
-            <!-- /end of Section 4 (right) -->
-
         <!-- /end of Content Section -->
 
         <!-- News Section -->
@@ -529,7 +525,7 @@
         <!-- /end of News Section -->
 
         <!-- Trending Stories Section -->
-        <div class="trending-stories"></div>
+        <div class="trending-stories"> Trending Stories</div>
         <!-- /end of Trending Stories Section -->
 
 
