News title / elections

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -522,7 +522,46 @@
 
         <!-- News Section -->
         <!-- News Big Story -->
-        <div class="news-big"> News big</div>
+        <section class="news-election">
+
+            <!-- Latest News Section -->
+            <div class="ne-news-section">
+
+                <!-- Latest News Title Box -->
+                <div class="ne-news-title-box">
+
+                    <!-- Latest News Title Flag -->
+                    <div class="ne-news-title-flag">
+                        <!-- Latest Title News Text -->
+                            <div class="ne-news-title-text-box">
+                                <h1 class="ne-news-title-text">ELECTIONS HQ</h1>
+                            </div>
+                        <!-- /end of Latest Title News Text -->
+                    </div>
+                    <!-- /end of Latest News Title Flag -->
+
+                    <!-- Latest News Title Line -->
+                    <div class="ne-news-title-line-box">
+                        <div class="ne-news-title-line"></div>
+                    </div>
+                    <!-- /end of Latest News Title Line -->
+                </div>
+                <!-- /end of Latest News Title Box -->
+
+                <!-- Latest News Content Card -->
+                <div class="ne-news-content-card-wrapper">
+                    <div class="ne-news-content-card">
+                        <!-- Latest news Content Card Image -->
+                        <!-- /end of Latest news Content Card Image -->
+                    </div>
+                </div>
+                <!-- /end of Latest News Content Card -->
+
+            <!-- /end of Latest News Section -->
+            <div class="ne-news-section">
+
+                
+        </section>
         <!-- /end of News Big Story -->
 
         <!-- News Story medium left -->
