--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -242,7 +242,7 @@
                             </div>
                         </a>
                     </div>
-                    <!-- HP Zone Center Headline -->
+                    <!-- /end of HP Zone Center Headline -->
 
                     <!-- HP ZONE Center Details -->
                     <div class="hp-z-center-details">
@@ -533,9 +533,9 @@
                     <!-- Latest News Title Flag -->
                     <div class="ne-news-title-flag">
                         <!-- Latest Title News Text -->
-                            <div class="ne-news-title-text-box">
-                                <h1 class="ne-news-title-text">ELECTIONS HQ</h1>
-                            </div>
+                        <div class="ne-news-title-text-box">
+                            <h1 class="ne-news-title-text">ELECTIONS HQ</h1>
+                        </div>
                         <!-- /end of Latest Title News Text -->
                     </div>
                     <!-- /end of Latest News Title Flag -->
@@ -552,15 +552,54 @@
                 <div class="ne-news-content-card-wrapper">
                     <div class="ne-news-content-card">
                         <!-- Latest news Content Card Image -->
+                        <div class="ne-news-content-img-wrapper">
+                            <img class="ne-news-content-img" src="https://img.huffingtonpost.com/asset/5b95e78c200000040734c53e.jpeg?cache=b0oz69ukna&ops=336_189,quality_75" />
+                        </div>
                         <!-- /end of Latest news Content Card Image -->
+                        <!-- Latest News Content Wrapper -->
+                        <div class="ne-news-content-wrapper">
+                            <!-- Latest News Content Headline -->
+                            <div class="ne-news-content-headline">
+                                <a class="ne-news-content-link">
+                                    <div class="ne-news-content-text">
+                                        Former Ted Cruz Campaign Strategist Has A Wake-Up Call For His Old Boss
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Latest News Content Headline -->
+
+                            <!-- Latest News Content Details -->
+                            <div class="ne-news-content-details">
+                                <!-- Latest News Content Details des-->
+                                <div class="ne-news-content-des">
+                                    <a class="ne-news-content-des-link">
+                                        <div class="ne-news-content-des-text">
+                                            Rick Tyler said that it's entirely possible for Cruz to lose the Texas
+                                            Senate race.
+                                        </div>
+                                    </a>
+                                </div>
+                                <!-- Latest News Content Details author-->
+                                <div class="ne-news-content-author">
+                                    <a class="ne-news-content-author-link">
+                                        <div class="ne-news-content-author-text">
+                                            By Ed Mazza
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- /end of Latest News Content Details -->
+                        </div>
+                        <!-- /end of Latest News Content Wrapper -->
+
                     </div>
                 </div>
                 <!-- /end of Latest News Content Card -->
 
-            <!-- /end of Latest News Section -->
-            <div class="ne-news-section">
+                <!-- /end of Latest News Section -->
+                <div class="ne-news-section">
 
-                
+
         </section>
         <!-- /end of News Big Story -->
 
