--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -553,7 +553,7 @@
                     <div class="ne-news-content-card">
                         <!-- Latest news Content Card Image -->
                         <div class="ne-news-content-img-wrapper">
-                            <img class="ne-news-content-img" src="https://img.huffingtonpost.com/asset/5b95e78c200000040734c53e.jpeg?cache=b0oz69ukna&ops=336_189,quality_75" />
+                            <img class="ne-news-content-img" src="https://img.huffingtonpost.com/asset/5b95e78c200000040734c53e.jpeg" />
                         </div>
                         <!-- /end of Latest news Content Card Image -->
                         <!-- Latest News Content Wrapper -->
