Finish election news section on desktop

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -599,17 +599,70 @@
                 <!-- /end of Latest News Section -->
                 <div class="ne-news-section">
 
-
         </section>
         <!-- /end of News Big Story -->
 
-        <!-- News Story medium left -->
-        <div class="news-left"> News left</div>
-        <!-- /end of News medium left -->
+        <!-- Election News Story Card Wrapper -->
+        <section class="ne-one-story-card-wrapper">
 
-        <!-- News Story medium right -->
-        <div class="news-right">News right</div>
-        <!-- /end of News medium right -->
+            <!-- Election News Story Card One  -->
+            <div class="ne-one-story-card">
+
+                <!-- Election News Story Card Img -->
+                <div class="ne-one-story-card-img-wrapper">
+                    <img class="ne-one-story-card-img" src="https://img.huffingtonpost.com/asset/5b96106a2000000b0b37bab3.png" />
+                </div>
+                <!-- /end of Election News Story Card Img -->
+
+                <!-- Election News Story Card Details -->
+                <div class="ne-one-story-card-details">
+                    <!-- Election News Story Card Link -->
+                    <a class="ne-one-story-card-link">
+                        <!-- Election News Story Card Link Text-->
+                        <div class="ne-one-story-card-text">
+                            RNC Chair Says Republicans Have ’50-50′ Shot To Keep Control Of The House
+                        </div>
+                        <!-- /end of Election News Story Card Link Text-->
+                    </a>
+                    <!-- /end of Election News Story Card Link -->
+                </div>
+                <!-- /end of Election News Story Card Details -->
+            </div>
+            <!-- /end of Election News Story Card One  -->
+
+        </section>
+        <!-- /end of Election News Story One -->
+
+        <!-- Election News Story Card Wrapper -->
+        <section class="ne-two-story-card-wrapper">
+
+            <!-- Election News Story Card Two  -->
+            <div class="ne-two-story-card">
+
+                <!-- Election News Story Card Img -->
+                <div class="ne-two-story-card-img-wrapper">
+                    <img class="ne-two-story-card-img" src="https://img.huffingtonpost.com/asset/5b9426a92000003a0734c492.jpeg" />
+                </div>
+                <!-- /end of Election News Story Card Img -->
+
+                <!-- Election News Story Card Details -->
+                <div class="ne-two-story-card-details">
+                    <!-- Election News Story Card Link -->
+                    <a class="ne-two-story-card-link">
+                        <!-- Election News Story Card Link Text-->
+                        <div class="ne-two-story-card-text">
+                            New York Voters Are About To Tell Us A Lot About The State Of The Resistance
+                        </div>
+                        <!-- /end of Election News Story Card Link Text-->
+                    </a>
+                    <!-- /end of Election News Story Card Link -->
+                </div>
+                <!-- /end of Election News Story Card Details -->
+            </div>
+            <!-- /end of Election News Story Card Two  -->
+
+        </section>
+        <!-- /end of Election News Story Two -->
         <!-- /end of News Section -->
 
         <!-- Trending Stories Section -->
