--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -665,11 +665,33 @@
         <!-- /end of Election News Story Two -->
         <!-- /end of News Section -->
 
+        <!-- Opinions Section -->
+        <section class="opinion-section"> Opinions</section>
+        <!-- /end of Opinions Section -->
+
+        <!-- Top Videos Section -->
+        <section class="tv-section"> Top Videos</section>
+        <!-- /end of Top Videos Section -->
+        
         <!-- Trending Stories Section -->
-        <div class="trending-stories"> Trending Stories</div>
-        <!-- /end of Trending Stories Section -->
+        <section class="ts-section"> Trending Stories</section>            
+        <!-- /end of Trending Stories Section ->
+            
+        <!-- In the News Section -->
+        <section class="itn-section">In the News</section>
+        <!-- /end of In the News Section -->
 
+        <!-- Partners Section -->
+        <section class="partners-section">Our partnets</section>
+        <!-- /end of Partners Section -->
 
+        <!-- Videos Section -->
+        <section class="video-section">Video Section</section>
+        <!-- /end of Videos Section -->
+
+        <!-- Footer -->
+        <footer class="footer">footer</footer>
+        <!-- /end of Footer -->
 
 
     </div>
