--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -666,15 +666,73 @@
         <!-- /end of News Section -->
 
         <!-- Opinions Section -->
-        <section class="opinion-section"> Opinions</section>
+        <section class="opinion-section">
+            <!-- Opinion Section wrapper -->
+            <div class="os-section-wrapper">
+                <!-- Opinion Title Section Box -->
+                <div class="os-title-box">
+                    <!-- Opinion title flag -->
+                    <div class="os-title-flag">
+                        <!-- Opinion Title text -->
+                        <div class="os-title-text-box">
+                            <h1 class="os-title-text">Opinion</h1>
+                        </div>
+                    </div>
+                    <!-- /end of Opinion title flag -->
+                    <!-- Opinion Title Line -->
+                    <div class="os-title-line-box">
+                        <div class="os-title-line"></div>
+                    </div>
+                    <!-- /end of Opinion Title Line -->
+                </div>
+                <!-- /end of Opinion Title Section Box -->
+
+                <!-- Opinion Card Wrapper -->
+                <div class="os-card-wrapper">
+
+                    <!-- Opinion card -->
+                    <div class="os-card">
+                        <!-- Opinion Card image -->
+                        <div class="os-card-img-wrapper">
+                            <img class="os-card-img" src="https://img.huffingtonpost.com/asset/5aaeaa882000008106eb242e.jpg" />
+                        </div>
+                        <!-- /end of Opinion Card image -->
+
+                        <!-- Opinion card Details Box-->
+                        <div class="os-card-details-box">
+                            <!-- Opinions Card Details Des -->
+                            <a class="os-card-details-link">
+                                <div class="os-card-details-text">
+                                    Sweden Shows No Country Is Immune To Far-Right, Anti-Immigrant Backlash
+                                </div>
+                            </a>
+                            <!-- /end of Opinions Card Details Des -->
+                            <!-- Opinion Card Author -->
+                            <div class="os-card-author-link">
+                                <div class="os-card-author-text">
+                                    By Robert Kuttner, Columnist
+                                </div>
+                            </div>
+                            <!-- /end of Opinion Card Author -->
+                        </div>
+                        <!-- /end of Opinion card Details Box-->
+                    </div>
+                    <!-- /end of Opinion card -->
+
+
+                </div>
+                <!-- /end of Opinion Card Wrapper -->
+            </div>
+            <!-- /end of Opinion Section wrapper -->
+        </section>
         <!-- /end of Opinions Section -->
 
         <!-- Top Videos Section -->
         <section class="tv-section"> Top Videos</section>
         <!-- /end of Top Videos Section -->
-        
+
         <!-- Trending Stories Section -->
-        <section class="ts-section"> Trending Stories</section>            
+        <section class="ts-section"> Trending Stories</section>
         <!-- /end of Trending Stories Section ->
             
         <!-- In the News Section -->
