Add opinion content

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -719,6 +719,63 @@
                     </div>
                     <!-- /end of Opinion card -->
 
+                    <!-- Opinion card -->
+                    <div class="os-card">
+                        <!-- Opinion Card image -->
+                        <div class="os-card-img-wrapper">
+                            <img class="os-card-img" src="https://img.huffingtonpost.com/asset/5aaeaa882000008106eb242e.jpg" />
+                        </div>
+                        <!-- /end of Opinion Card image -->
+
+                        <!-- Opinion card Details Box-->
+                        <div class="os-card-details-box">
+                            <!-- Opinions Card Details Des -->
+                            <a class="os-card-details-link">
+                                <div class="os-card-details-text">
+                                    Sweden Shows No Country Is Immune To Far-Right, Anti-Immigrant Backlash
+                                </div>
+                            </a>
+                            <!-- /end of Opinions Card Details Des -->
+                            <!-- Opinion Card Author -->
+                            <div class="os-card-author-link">
+                                <div class="os-card-author-text">
+                                    By Robert Kuttner, Columnist
+                                </div>
+                            </div>
+                            <!-- /end of Opinion Card Author -->
+                        </div>
+                        <!-- /end of Opinion card Details Box-->
+                    </div>
+                    <!-- /end of Opinion card -->
+
+                    <!-- Opinion card -->
+                    <div class="os-card">
+                        <!-- Opinion Card image -->
+                        <div class="os-card-img-wrapper">
+                            <img class="os-card-img" src="https://img.huffingtonpost.com/asset/5aaeaa882000008106eb242e.jpg" />
+                        </div>
+                        <!-- /end of Opinion Card image -->
+
+                        <!-- Opinion card Details Box-->
+                        <div class="os-card-details-box">
+                            <!-- Opinions Card Details Des -->
+                            <a class="os-card-details-link">
+                                <div class="os-card-details-text">
+                                    Sweden Shows No Country Is Immune To Far-Right, Anti-Immigrant Backlash
+                                </div>
+                            </a>
+                            <!-- /end of Opinions Card Details Des -->
+                            <!-- Opinion Card Author -->
+                            <div class="os-card-author-link">
+                                <div class="os-card-author-text">
+                                    By Robert Kuttner, Columnist
+                                </div>
+                            </div>
+                            <!-- /end of Opinion Card Author -->
+                        </div>
+                        <!-- /end of Opinion card Details Box-->
+                    </div>
+                    <!-- /end of Opinion card -->
 
                 </div>
                 <!-- /end of Opinion Card Wrapper -->
