Desktop layout for top videos content and styling

--- a/CSS-Grids/Huff-Post/index.html
+++ b/CSS-Grids/Huff-Post/index.html
@@ -785,7 +785,68 @@
         <!-- /end of Opinions Section -->
 
         <!-- Top Videos Section -->
-        <section class="tv-section"> Top Videos</section>
+        <section class="tv-section">
+
+            <!-- Tv section Title Box -->
+            <div class="tv-section-title-box">
+                <!-- TV section Title Flag -->
+                <div class="tv-section-title-flag">
+                    <!-- TV section Title Text -->
+                    <h1 class="tv-section-title-text">TOP VIDEOS</h1>
+                    <!-- /end of TV section Title Text -->
+                </div>
+                <!-- /end of TV section Title Flag -->
+            </div>
+            <!-- /end of Tv section Title Box -->
+
+            <!-- TV Content Box -->
+            <div class="tv-section-content-box">
+                <!-- TV Content Box Wrapper -->
+                <div class="tv-box-wrapper">
+
+                    <!-- TV Content Box one -->
+                    <div class="tv-box-one">
+                        <!-- TV content box img -->
+                        <div class="tv-box-one-img-wrapper">
+                            <img class="tv-box-one-img" src="https://img.huffingtonpost.com/asset/5b96dc51190000320e503d43.jpeg" />
+                        </div>
+                        <!-- /end of TV content box img -->
+                        <!-- TV content Details -->
+                        <div class="tv-box-one-details">
+                            <a class="tv-box-one-text-link">
+                                <div class="tv-box-one-text">
+                                    Why Dismissing Serena Williams’ Discrimination Claim Is So Problematic
+                                </div>
+                            </a>
+                        </div>
+                        <!-- /end of TV content Des -->
+                    </div>
+                    <!-- /end of TV Content Box one -->
+
+                    <!-- TV Content Box two -->
+                    <div class="tv-box-two">
+                        <!-- TV content box img -->
+                        <div class="tv-box-one-img-wrapper">
+                            <img class="tv-box-one-img" src="https://img.huffingtonpost.com/asset/5b9675ab190000440e503cbd.jpeg" />
+                        </div>
+                        <!-- /end of TV content box img -->
+                        <!-- TV content Details -->
+                        <div class="tv-box-one-details">
+                            <a class="tv-box-one-text-link">
+                                <div class="tv-box-one-text">
+                                    Despite Boycotts, Nike Sales Soar After Adding Kaepernick To Its Ad Campaign
+                                </div>
+                            </a>
+                        </div>
+                        <!-- /end of TV content Des -->
+                    </div>
+                    <!-- /end of TV Content Box two -->
+                </div>
+                <!-- /end of TV Content Box Wrapper -->
+            </div>
+            <!-- /end of TV Content Box -->
+
+        </section>
         <!-- /end of Top Videos Section -->
 
         <!-- Trending Stories Section -->
